<resources>
    <string name="app_name">Kereseres</string>
    <string name="tituloApp">Kereseres</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="title_activity_edit_perfil">EditPerfilActivity</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="crearOfertaDemanda">Create</string>

    <!-- Login -->
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="passwordHint">Password</string>
    <string name="forgotPass">Password?</string>
    <string name="singUp">Sing Up</string>

    <!--Botones comunes-->
    <string name="cancelarBtn">Cancel</string>
    <string name="aceptarBtn">Acept</string>
    <string name="createBtn">Create</string>
    <string name="editarBtn">Edit</string>
    <string name="sendBtn">Send</string>
    <string name="deleteBtn">Delete</string>

    <!--Sing up y _perfil-->
    <string name="apartment">Apartment:</string>
    <string name="name">Name:</string>
    <string name="code">Community Code:</string>
    <string name="descripResetPassword">Forgot your password?</string>
    <string name="numTelefono">Phone:</string>

    <!--activity_crear_demanda Y oferta-->
    <string name="textCreateDemand">Create a demand</string>
    <string name="textCreateOffer">Create an offer</string>
    <string name="textTitlePedido">Title:</string>
    <string name="hintIntroduceTitulo">Introduce the title</string>
    <string name="textCategory">Category:</string>
    <string name="textTypePayment">Type of payment:</string>
    <string name="radioButtonMoney">Money</string>
    <string name="radioButtonFavor">Favor</string>
    <string name="hintEnterDescription">Enter the description.</string>
    <string name="textDescription">Description:</string>

    <!-- activity_list_view-->
    <string name="floatBTNdemand">Demand</string>
    <string name="floatBTNoffer">Offer</string>


    <!-- activity_detalles_pedido-->
    <string name="btnBACK">BACK</string>
    <string name="btnCONTACT">CONTACT</string>


    <!--array_spinner-->
    <string name="arraySpinnerCompany">Company/Babysitter</string>
    <string name="arraySpinnerComputing">Computing</string>
    <string name="arraySpinnerClases">Lessons</string>
    <string name="arraySpinnerHousehold">Household items</string>

    <!--SIN CATALOGAR-->
    <string name="action_settings">Settings</string>


</resources>


