<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_degradado"
    android:orientation="vertical">
    <TextView
        style="@style/style_titleCrear"
        android:text="@string/textCreateOffer"
        android:background="@color/verdeTitulo"
        android:textColor="@color/textBtnLogin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textTitlePedido"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/titleCreaOfertaET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintIntroduceTitulo" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/textCategory"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/spinnerCreaOferta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:entries="@array/Categories"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textTypePayment"
            android:textSize="20dp"
            android:layout_marginTop="3dp"/>

        <RadioGroup
            android:id="@+id/radioGroupBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radioBtnMoneyCreaOferta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/radioButtonMoney"
                android:layout_marginRight="20dp"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/radioBtnFavorCreaOferta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioButtonFavor"
                android:textSize="15dp"
                android:onClick="onRadioButtonClicked"/>

        </RadioGroup>
    </LinearLayout>

    <EditText
        android:id="@+id/descripCreaOfertaET"
        style="@style/style_editTextCrear"
        android:background="@drawable/estilo_edit_text"
        android:hint="@string/hintEnterDescription"
        android:scrollbarThumbVertical="@drawable/scrollbar_design" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp">
        <Button
            android:id="@+id/btnCancelarCreaOferta"
            style="@style/style_btnCrear"
            android:clickable="false"
            android:onClick="Cancelar"
            android:text="@string/cancelarBtn"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/btnCrearOferta"
            style="@style/style_btnCrear"
            android:clickable="false"
            android:onClick="registrar"
            android:text="@string/createBtn"
            android:layout_gravity="end"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>
</LinearLayout>
