<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/fondo_principal">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo2"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tituloApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:text="@string/tituloApp"
        android:textColor="@color/verdeTitulo"
        android:textSize="70dp" />

    <LinearLayout
        android:id="@+id/cuadradoLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/box_login_radious"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/editTextlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@+id/title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etEmailSingUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:textColor="@color/verdeTitulo"
                    android:textColorHint="@color/verdeTitulo"
                    android:textSize="15sp">

                    <requestFocus />
                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@+id/title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPasswordSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:textColor="@color/verdeTitulo"
                    android:textColorHint="@color/verdeTitulo"
                    android:textSize="15sp">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@+id/title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etNameSingUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name"
                    android:textColor="@color/verdeTitulo"
                    android:textColorHint="@color/verdeTitulo"
                    android:textSize="15sp">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@+id/title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etAparmetnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/apartment"
                    android:textColor="@color/verdeTitulo"
                    android:textColorHint="@color/verdeTitulo"
                    android:textSize="15sp">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@+id/title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etCodeSingUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/code"
                    android:textColor="@color/verdeTitulo"
                    android:textColorHint="@color/verdeTitulo"
                    android:textSize="15sp">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp">
            <Button
                android:id="@+id/btnCancelarSingUp"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:background="@drawable/boton_cambio_color"
                android:clickable="false"
                android:onClick="Cancelar"
                android:text="@string/cancelarBtn"
                android:textColor="@color/textBtnLogin"
                android:layout_marginRight="10dp"
                />

            <Button
                android:id="@+id/btnSingUp"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:background="@drawable/boton_cambio_color"
                android:clickable="false"
                android:onClick="registrar"
                android:text="@string/singUp"
                android:textColor="@color/textBtnLogin"
                android:layout_gravity="end"
                android:layout_marginLeft="10dp"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>