<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_principal">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo2"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tituloApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:text="@string/tituloApp"
        android:textSize="70dp"
        android:textColor="@color/verdeTitulo"
        />

    <LinearLayout
        android:id="@+id/cuadradoLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="100dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/box_login_radious"
        android:gravity="center"
        android:weightSum="10"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/editTextlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:padding="10dp">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@+id/title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:textColor="@color/verdeTitulo"
                    android:textColorHint="@color/verdeTitulo"
                    android:textSize="22sp">

                    <requestFocus />
                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@+id/title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/passwordHint"
                    android:inputType="textPassword"
                    android:textColor="@color/verdeTitulo"
                    android:textColorHint="@color/verdeTitulo"
                    android:textSize="22sp"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="3">

            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/tv_cambio_color"
                android:clickable="false"
                android:onClick="ForgetPassword"
                android:text="@string/forgotPass"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tvRayaSeparacion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="|"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tvSingUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/singUp"
                android:onClick="SignUp"
                android:layout_weight="2"
                android:textAlignment="center"
                android:background="@drawable/tv_cambio_color"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:background="@drawable/boton_cambio_color"
            android:clickable="false"
            android:textColor="@color/textBtnLogin"
            android:onClick="aceptar"
            android:text="@string/aceptarBtn" />
    </LinearLayout>

    <Button
        android:id="@+id/btGoogle"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:background="@drawable/signin_google"
        android:onClick="GoogleIn"
        android:textColor="@color/textBtnLogin" />
</RelativeLayout>
