<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.paulapps.kereseresapp.activities.login_signup.ResetPasswordActivity"
    android:background="@drawable/fondo_principal"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tituloApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:text="@string/tituloApp"
        android:textSize="70dp"
        android:textColor="@color/verdeTitulo"/>

    <TextView
        android:id="@+id/tvInfoReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etResetPass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="67dp"
        android:text="@string/descripResetPassword"
        android:textSize="24dp"
        android:textColor="#ffff"
        android:paddingLeft="25dp"
        android:paddingTop="50dp"/>

    <LinearLayout
        android:id="@+id/cuadradoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/box_login_radious"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/editTextlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@+id/title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etResetPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:textColor="@color/verdeTitulo"
                    android:textColorHint="@color/verdeTitulo"
                    android:textSize="20sp">

                    <requestFocus />
                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btReset"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="135dp"
        android:background="@drawable/boton_cambio_color"
        android:clickable="false"
        android:textColor="@color/textBtnLogin"
        android:onClick="Resetear"
        android:text="Send"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="244dp"
        android:layout_marginTop="30dp"/>

</LinearLayout>
